--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -99,7 +99,7 @@
             </pre>
         </div>
 
-            <p>Copy the code and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">this basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
+            <p>Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
             <p>To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/">UX Library</a> and the <a href="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap HTML Collection</a></p>.
 
       </div>
@@ -146,6 +146,8 @@
           color: #000;
           letter-spacing: -0.05rem;
       }
+
+      p a {font-weight: bold}
 
     </style>
 
