Fake Margins to adjust logotype

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -42,7 +42,7 @@
     <c-main-content>
       <c-main-navigation>
         <primary-items>
-          <nav-item location="/" class="active">Home</nav-item>
+          <nav-item location="https://scania.com/se/sv/home.html" class="active">Home</nav-item>
         </primary-items>
       </c-main-navigation>
 
@@ -117,7 +117,7 @@
 
       function Example() {
         this.dealerName = 'Bilmetro';
-        this.siteName = 'Lorem Ipsum';
+        this.siteName = 'Discount Calculator';
         this.topLinkName = 'Scania i Sverige'; 
         this.topLinkHref = 'https://scania.com/se/sv/home.html';
         this.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
@@ -138,7 +138,7 @@
 
       c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
           display: inline-block;
-          margin: 18px -16px 18px 15px;
+          margin: 14px -16px 17px 15px;
           text-transform: none;
           font-size: 2.6rem;
           vertical-align: middle;
