--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -100,7 +100,7 @@
         </div>
 
             <p>Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
-            <p>To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/">UX Library</a> and the <a href="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap HTML Collection</a></p>.
+            <p>To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/">UX Library</a> and the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap HTML Collection</a></p>.
 
       </div>
     </c-main-content>
@@ -117,7 +117,7 @@
 
       function Example() {
         this.dealerName = 'Bilmetro';
-        this.siteName = 'Discount Calculator';
+        this.siteName = 'Sverige';
         this.topLinkName = 'Scania i Sverige'; 
         this.topLinkHref = 'https://scania.com/se/sv/home.html';
         this.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
