--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -24,10 +24,6 @@
             background-size: 40px !important;  
         }
 
-        .container {
-            min-height: 1100px;
-        }
-
     </style>
   </head>
 
@@ -124,9 +120,35 @@
         this.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
       }
 
+      $(.navbar-default .navbar-header .navbar-brand:after {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    border-left: 1px solid #e2e2e2;
+    margin: 0 -20px 0 15px;
+    height: 20px;
+    cursor: default;
+}
+
+
+      var SitenameText = $(".navbar-header")
+            .clone()    //clone the element
+            .children() //select all the children
+            .remove()   //remove all the children
+            .end()  //again go back to selected element
+            .text();
+
+      if (SitenameText.trim() == '') {
+
+        $(".navbar-default .navbar-header .navbar-brand").addClass("border-none");
+
+      };
+
+
     </script>
     <style>
 
+      .navbar-default .navbar-header .navbar-brand.border-none:after {border:none;}
 
       nav.nav.navbar-nav.navbar-right.style-scope.c-corporate-header > nav-item {
           font-family: "Scania Sans";
