--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -87,15 +87,13 @@
             <pre>
               <code class="html">
 
-&lt;c-corporate-header site-name=&quot;{{example.siteName}}&quot; site-url=&quot;{{example.dealerUrl}}&quot; dealer-name=&quot;{{example.dealerName}}&quot; dealer-logo=&quot;{{example.dealerLogo}}&quot; dealer-url=&quot;{{example.dealerUrl}}&quot;&gt;
-  &lt;nav-item location=&quot;{{example.topLinkHref}}&quot;&gt;{{example.topLinkName}}&lt;/nav-item&gt;
-&lt;/c-corporate-header&gt;
+
 
               </code>
             </pre>
         </div>
 
-            <p>Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
+            <p class="mt-5">Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
             <p>To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/">UX Library</a> and the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap HTML Collection</a></p>.
 
       </div>
@@ -137,6 +135,7 @@
 
 
     </script>
+    
     <style>
 
       .navbar-default .navbar-header .navbar-brand.border-none:after {border:none;}
