--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -83,20 +83,23 @@
 
 
           <div id="html-code" class="app">
-            <h2>Code Sample</h2>
+            <h2>Code to copy</h2>
             <pre>
               <code class="html">
 
-
+&lt;c-corporate-header site-name=&quot;{{example.siteName}}&quot; site-url=&quot;{{example.dealerUrl}}&quot; dealer-name=&quot;{{example.dealerName}}&quot; dealer-logo=&quot;{{example.dealerLogo}}&quot; dealer-url=&quot;{{example.dealerUrl}}&quot;&gt;
+  &lt;nav-item location=&quot;{{example.topLinkHref}}&quot;&gt;{{example.topLinkName}}&lt;/nav-item&gt;
+&lt;/c-corporate-header&gt;
 
               </code>
             </pre>
-        </div>
+          </div>
 
             <p class="mt-5">Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
             <p>To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/">UX Library</a> and the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap HTML Collection</a></p>.
 
       </div>
+    </section>
     </c-main-content>
 
     <c-corporate-footer></c-corporate-footer>
@@ -135,7 +138,7 @@
 
 
     </script>
-    
+
     <style>
 
       .navbar-default .navbar-header .navbar-brand.border-none:after {border:none;}
