--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -120,10 +120,10 @@
       function Example() {
         var vm = this;
         vm.dealerName = 'Bilmetro';
-        vm.mobileName = 'BM';          
-        vm.siteName = 'Sverige';      
-        vm.topLinkName = 'Scania i Sverige'; 
-        vm.topLinkHref = 'https://scania.com/se/sv/home.html';
+        vm.mobileName = 'BM Stockholm';          
+        vm.siteName = 'Stockholm';      
+        vm.topLinkName = 'Scania Konfigurator'; 
+        vm.topLinkHref = 'https://configurator.scania.com/index.aspx?etel_market=5141&etel_language=5237';
         vm.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
         vm.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
         vm.apa = apa;
