--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -167,7 +167,7 @@
 
       p a {font-weight: bold}
 
-      @media (max-width: 992) {
+      @media (max-width: 992px) {
         .dealer span {display:none;}
 
         c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
