--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -168,12 +168,15 @@
       p a {font-weight: bold}
 
       @media (max-width: 992px) {
-        .dealer span {display:none;}
+
+        .c-corporate-header a.dealer.c-corporate-header img[src].c-corporate-header:not([src=""])  {
+          display:none;
+        }
 
         c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
             background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg);
             background-position: center right;
-            background-size: 46px 46px;
+            background-size: 40px 40px;
             }
       }
 
