--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -92,7 +92,7 @@
             <pre>
               <code class="html">
 
-&lt;c-corporate-header site-name=&quot;{{example.siteName}}&quot; site-url=&quot;{{example.dealerUrl}}&quot; dealer-name=&quot;{{example.dealerName}}&quot; dealer-logo=&quot;{{example.dealerLogo}}&quot; dealer-url=&quot;{{example.dealerUrl}}&quot;&gt;
+&lt;c-corporate-header site-name=&quot;{{example.siteName}}&quot; short-name=&quot;{{example.mobileName}}&quot; site-url=&quot;{{example.dealerUrl}}&quot; dealer-name=&quot;{{example.dealerName}}&quot; dealer-logo=&quot;{{example.dealerLogo}}&quot; dealer-url=&quot;{{example.dealerUrl}}&quot;&gt;
   &lt;nav-item location=&quot;{{example.topLinkHref}}&quot;&gt;{{example.topLinkName}}&lt;/nav-item&gt;
 &lt;/c-corporate-header&gt;
 
