--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -107,7 +107,12 @@
     </section>
     </c-main-content>
 
-    <c-corporate-footer></c-corporate-footer>
+    <c-corporate-footer>
+      <nav-item location="https://www.scania.com/global/en/home/misc/legal.html">Legal notice</nav-item>
+      <nav-item location="https://www.scania.com/global/en/home/misc/privacy-statement.html">Privacy statement</nav-item>
+      <nav-item location="scania.com/global/en/home/misc/privacy-statement/cookies.html">Cookies</nav-item>
+      <nav-item location="mailto:corporate-ui@scania.com">Contact us</nav-item>    
+    </c-corporate-footer>
 
     <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
     <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
@@ -191,7 +196,7 @@
           c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header {
               width: 41px;
           } 
-                     
+
       }
 
     </style>
