--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -108,8 +108,12 @@
     </c-main-content>
 
     <c-corporate-footer>
-      <nav-item location="https://www.scania.com/global/en/home/misc/legal.html">Legal notice</nav-item>
-      <nav-item location="https://www.scania.com/global/en/home/misc/privacy-statement.html">Privacy statement</nav-item>
+      <nav-item location="https://www.scania.com/global/en/home/misc/legal.html">
+        <a href="" target="_blank">Legal notice</a>
+        </nav-item>
+      <nav-item location="https://www.scania.com/global/en/home/misc/privacy-statement.html">
+        <a target="_blank">Privacy statement</a>
+        </nav-item>
       <nav-item location="scania.com/global/en/home/misc/privacy-statement/cookies.html">Cookies</nav-item>
       <nav-item location="mailto:corporate-ui@scania.com">Contact us</nav-item>    
     </c-corporate-footer>
