--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -109,13 +109,15 @@
 
     <c-corporate-footer>
       <nav-item location="https://www.scania.com/global/en/home/misc/legal.html">
-        <a href="" target="_blank">Legal notice</a>
+        <a href="https://www.scania.com/global/en/home/misc/legal.html" target="_blank">Legal notice</a>
         </nav-item>
       <nav-item location="https://www.scania.com/global/en/home/misc/privacy-statement.html">
-        <a target="_blank">Privacy statement</a>
+        <a href="https://www.scania.com/global/en/home/misc/privacy-statement.html" target="_blank">Privacy statement</a>
         </nav-item>
-      <nav-item location="scania.com/global/en/home/misc/privacy-statement/cookies.html">Cookies</nav-item>
-      <nav-item location="mailto:corporate-ui@scania.com">Contact us</nav-item>    
+      <nav-item location="https://www.scania.com/global/en/home/misc/privacy-statement/cookies.html">
+        <a href="" target="_blank">Cookies</a>
+      </nav-item>
+      <nav-item location="mailto:corporate-ui@scania.com">Contact us</a></nav-item>    
     </c-corporate-footer>
 
     <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
