--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -229,13 +229,15 @@
 
         appInput()
       }
+     </script>  
 
+     <script>       
 
       $(function(){
                 $('pre code.page.html').each(function(i, block) {
             hljs.highlightBlock(block);
           });
-      }        
+      })        
 
      </script>  
 
