--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -46,45 +46,52 @@
         <div class="container">
           <h3>Corporate Header Code Generator</h3>
           <p>Simulate the look of your page by entering a URL of a logotype picture or if you do not have a picture, just enter a name. As long as there is a logotype picture available, the dealer name will nog be shown as text.</p>
-
           <form class="app">
-
-            <div class="form-group">
-              <label>Dealer name</label>
-              <input type="text" class="form-control" placeholder="Dealer name" ng-model="example.dealerName">
+            <div class="row">  
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Dealer name</label>
+                  <input type="text" class="form-control" placeholder="Dealer name" ng-model="example.dealerName">
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Dealer Home link</label>
+                  <input type="text" class="form-control" placeholder="URL to visit when clicking the logotype" ng-model="example.dealerUrl">
+                </div>            
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Dealer logotype</label>
+                  <input type="text" class="form-control" placeholder="URL to logotype image" ng-model="example.dealerLogo">
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Mobile header</label>
+                  <input type="text" class="form-control" placeholder="Name of the application for display on mobile units" ng-model="example.mobileName">
+                </div> 
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Site name</label>
+                  <input type="text" class="form-control" placeholder="Name of the application or site" ng-model="example.siteName" ng-change="example.appInput()">
+                </div>       
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Top link name</label>
+                  <input type="text" class="form-control" placeholder="Text of top link" ng-model="example.topLinkName">
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="form-group">
+                  <label>Top link URL</label>
+                  <input type="text" class="form-control" placeholder="URL for top link" ng-model="example.topLinkHref">
+                </div>
+              </div>      
             </div>
-
-            <div class="form-group">
-              <label>Dealer Home link</label>
-              <input type="text" class="form-control" placeholder="URL to visit when clicking the logotype" ng-model="example.dealerUrl">
-            </div>            
-
-            <div class="form-group">
-              <label>Dealer logotype</label>
-              <input type="text" class="form-control" placeholder="URL to logotype image" ng-model="example.dealerLogo">
-            </div>
-
-            <div class="form-group">
-              <label>Mobile header</label>
-              <input type="text" class="form-control" placeholder="Name of the application for display on mobile units" ng-model="example.mobileName">
-            </div> 
-
-            <div class="form-group">
-              <label>Site name</label>
-              <input type="text" class="form-control" placeholder="Name of the application or site" ng-model="example.siteName" ng-change="example.appInput()">
-            </div>       
-
-            <div class="form-group">
-              <label>Top link name</label>
-              <input type="text" class="form-control" placeholder="Text of top link" ng-model="example.topLinkName">
-            </div>
-
-            <div class="form-group">
-              <label>Top link URL</label>
-              <input type="text" class="form-control" placeholder="URL for top link" ng-model="example.topLinkHref">
-            </div>
-      
-          </form>
+        </form>
 
 
           <div id="html-code" class="app">
