--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -250,6 +250,7 @@
 
        pre code {font-size: 16px}
        pre code.page.html {font-size: 14px}
+       pre {background-color: #f8f8f8;}
 
       .navbar-default .navbar-header .navbar-brand.border-none:after {border:none;}
 
@@ -259,14 +260,14 @@
           font-size: 12px;
           color: #747472;
           text-transform: uppercase;
-        }
+      }
 
-        .navbar-default .navbar-header .navbar-nav a {
-            padding: 0;
-            vertical-align: middle;
-            margin: 9px 0;
-            display: inline-block;
-        }
+      .navbar-default .navbar-header .navbar-nav a {
+          padding: 0;
+          vertical-align: middle;
+          margin: 9px 0;
+          display: inline-block;
+      }
 
       c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
           display: inline-block;
@@ -283,7 +284,8 @@
 
       @media (max-width: 992px) {
 
-        .c-corporate-header a.dealer.c-corporate-header img[src].c-corporate-header:not([src=""])  {
+        .c-corporate-header a.dealer.c-corporate-header img[src].c-corporate-header:not([src=""]),
+        .c-corporate-header a.dealer.c-corporate-header > span {
           display:none;
         }
 
@@ -293,11 +295,11 @@
             background-size: 41px 37px;
             width: 41px !important;
             height: 37px !important;
-            }
+        }
 
-          c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header {
-              width: 41px;
-          } 
+        c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header {
+            width: 41px;
+        } 
 
       }
 
