--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -11,20 +11,8 @@
     <title>Corporate UI - Dealer Header Code Generator</title>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
-    <style>
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
-            width: 41px !important;
-            height: 37px !important;
-        }
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
-            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
-            background-size: 40px !important;  
-        }
-
-    </style>
   </head>
 
 
@@ -293,6 +281,16 @@
         .c-corporate-header a.dealer.c-corporate-header > span {
           display:none;
         }
+
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
+            width: 41px !important;
+            height: 37px !important;
+        }
+
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
+            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
+            background-size: 40px !important;  
+        }        
 
         c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
             background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg);
