--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -17,7 +17,7 @@
 
 
 
-  <body class="scania" ng-controller="Example as example">
+  <body class="scania app" ng-controller="Example as example">
 
     <c-corporate-header site-name="{{example.siteName}}" short-name="{{example.mobileName}}" site-url="{{example.dealerUrl}}" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
       <nav-item ng-attr-location="{{example.topLinkHref}}" ng-bind="example.topLinkName"></nav-item>
@@ -32,7 +32,7 @@
 
       <section class="light">
         <div class="container">
-          <h3>Dealer Header Code Generator</h3>
+          <h1>Dealer Header Code Generator</h1>
           <p>Simulate the look of your page by entering a URL of a logotype picture or if you do not have a picture, just enter a name. As long as there is a logotype picture available, the dealer name will nog be shown as text. Replace the data below with your particluar needs and discover how the header on the top of the page changes.</p>
           <form class="app">
             <div class="row">  
@@ -64,7 +64,7 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group">
-                  <label>Mobile Site Header</label>
+                  <label>Mobile Site Header (narrow browser window to view)</label>
                   <input type="text" class="form-control" placeholder="Name of the application for display on mobile units" ng-model="example.mobileName">
                 </div> 
               </div>
@@ -95,7 +95,7 @@
             <div class="tab-content app zone">
                 <div id="component-code" class="tab-pane fade in active">
                   <div class="page-header">
-                    <h3>HTML for {{example.dealerName}} Header</h1>
+                    <h4>HTML for {{example.dealerName}} Header</h4>
                   </div>            
                     <pre>
                       <code class="html">
@@ -110,7 +110,7 @@
                 </div>
                 <div id="page-code" class="tab-pane fade">
                   <div class="page-header">
-                    <h3>Suggested code for {{example.dealerName}} Complete Page</h1>
+                    <h4>Suggested code for {{example.dealerName}} Complete Page</h4>
                   </div>            
                     <pre>
                       <code class="page html">
@@ -281,6 +281,10 @@
         .c-corporate-header a.dealer.c-corporate-header > span {
           display:none;
         }
+
+        c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
+            margin: 11px -16px 16px 15px;
+        } 
 
         .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
             width: 41px !important;
