--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -13,6 +13,19 @@
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
+    <style>
+
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
+            width: 41px !important;
+            height: 37px !important;
+        }
+
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
+            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
+            background-size: 40px !important;  
+        }
+
+    </style>
   </head>
 
 
@@ -281,20 +294,6 @@
         .c-corporate-header a.dealer.c-corporate-header > span {
           display:none;
         }
-
-        c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
-            margin: 11px -16px 16px 15px;
-        } 
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
-            width: 41px !important;
-            height: 37px !important;
-        }
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
-            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
-            background-size: 40px !important;  
-        }        
 
         c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
             background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg);
