--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -239,11 +239,11 @@
 
      <script>       
 
-      $(function(){
-                $('pre code.page.html').each(function(i, block) {
-            hljs.highlightBlock(block);
-          });
-      })        
+//      $(function(){
+//                 $('pre code.page.html').each(function(i, block) {
+//             hljs.highlightBlock(block);
+//           });
+//       })        
 
      </script>  
 
