Removed Show Search

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -149,7 +149,7 @@
 
   &lt;c-main-content&gt;
 
-    &lt;c-main-navigation show-search&gt;
+    &lt;c-main-navigation&gt;
       &lt;primary-items&gt;
         &lt;nav-item location=&quot;#&quot;&gt;Sample Item&lt;/nav-item&gt;
         &lt;nav-item location=&quot;#&quot;&gt;Sample Item&lt;/nav-item&gt;            
@@ -243,7 +243,7 @@
 //                 $('pre code.page.html').each(function(i, block) {
 //             hljs.highlightBlock(block);
 //           });
-//       })        
+//        })        
 
      </script>  
 
