Added 28px height

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -63,7 +63,7 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group">
-                  <label>Dealer logotype (optional)</label>
+                  <label>Dealer logotype (optional) | Should be 28px heigh</label>
                   <input type="text" class="form-control" placeholder="URL to logotype image" ng-model="example.dealerLogo">
                 </div>
               </div>
