--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -25,6 +25,16 @@
             background-size: 40px !important;  
         }
 
+
+c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
+    background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol-logotype.svg);
+    background-position: center left, center right;
+    background-size: 170px 28px;
+
+        
+
+
+
     </style>
   </head>
 
