--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -23,6 +23,7 @@
         .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
             background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
             background-size: 40px !important;  
+            top: 9px !important;              
         }
 
 
@@ -30,10 +31,11 @@
             background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol-logotype.svg);
             background-position: center right;
             background-size: 221px 40px;
+            background-color: white;
+            height: 38px;
+            top: 16px;
         }
-                
-
-
+ 
 
     </style>
   </head>
