Adjusting logo for public

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -24,8 +24,11 @@
             background-size: 202px 40px;
             background-color: white;
             height: 38px;
-            top: 16px;
+            top: 26px;
         }
+        body.app c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {        
+            top: 16px;       
+        }    
 
         .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
             width: 41px !important;
@@ -35,10 +38,13 @@
         body.header-is-sticky c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
             background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
             background-size: 40px !important;  
-            top: 5px !important;              
-        }        
- 
+            top: 5px !important;
+        }       
 
+        .navbar-default .navbar-header .navbar-symbol {
+            margin-left: 35px;
+        } 
+ 
     </style>
   </head>
 
