--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -50,7 +50,7 @@
 
 
 
-  <body class="scania app" ng-controller="Example as example">
+  <body class="scania" ng-controller="Example as example">
 
     <c-corporate-header site-name="{{example.siteName}}" short-name="{{example.mobileName}}" site-url="{{example.dealerUrl}}" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
       <nav-item ng-attr-location="{{example.topLinkHref}}" ng-bind="example.topLinkName"></nav-item>
@@ -63,7 +63,7 @@
         </primary-items>
       </c-main-navigation>
 
-      <section class="light">
+      <section class="light app">
         <div class="container">
           <h1>Dealer Header : Code Generator</h1>
           <p>Simulate the look of your page by entering a URL of a logotype picture, or if you do not have a picture, remove the logotype URL and just enter a Dealer name. As long as there is a logotype picture available, the dealer name will nog be shown as text. Replace the data below with your particluar needs and discover how the header on the top of the page changes.</p>
