--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -13,39 +13,6 @@
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.3-CF/js/corporate-ui.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
-    <style>
-
-
-
-
-        c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
-            background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol-logotype.svg);
-            background-position: center right;
-            background-size: 202px 40px;
-            background-color: white;
-            height: 38px;
-            top: 26px;
-        }
-        body.app c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {        
-            top: 16px;       
-        }    
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
-            width: 41px !important;
-            height: 37px !important;
-        }        
-
-        body.header-is-sticky c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
-            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
-            background-size: 40px !important;  
-            top: 5px !important;
-        }       
-
-        .navbar-default .navbar-header .navbar-symbol {
-            margin-left: 35px;
-        } 
- 
-    </style>
   </head>
 
 
@@ -91,7 +58,7 @@
             <div class="row"> 
               <div class="col-md-6 col-sm-12">
                 <div class="form-group">
-                  <label>Site name (optional)</label>
+                  <label>Application name (optional)</label>
                   <input type="text" class="form-control" placeholder="Name of the application or site" ng-model="example.siteName" ng-change="example.appInput()">
                 </div>       
               </div>
@@ -237,7 +204,7 @@
         var vm = this;
         vm.dealerName = 'Bilmetro';
         vm.mobileName = 'BM Stockholm';          
-        vm.siteName = 'Stockholm';      
+        // vm.siteName = 'Stockholm';      
         vm.topLinkName = 'Scania Konfigurator'; 
         vm.topLinkHref = 'https://configurator.scania.com/index.aspx?etel_market=5141&etel_language=5237';
         vm.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
@@ -269,6 +236,36 @@
 
     <style>
 
+
+
+        c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
+            background-image: url(https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol-logotype.svg);
+            background-position: center right;
+            background-size: 202px 40px;
+            background-color: white;
+            height: 38px;
+            top: 26px;
+        }
+        
+        body.app c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {        
+            top: 16px;       
+        }    
+
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
+            width: 41px !important;
+            height: 37px !important;
+        }        
+
+        body.header-is-sticky c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header .navbar-symbol.c-corporate-header:before {
+            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
+            background-size: 40px !important;  
+            top: 5px !important;
+        }       
+
+        .navbar-default .navbar-header .navbar-symbol {
+            margin-left: 35px;
+        } 
+ 
        pre code {font-size: 16px}
        pre code.page.html {font-size: 14px}
        pre {background-color: #f8f8f8;}
@@ -290,8 +287,10 @@
           display: inline-block;
       }
 
-      c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
-          display: inline-block;
+
+.navbar-default .navbar-header {
+
+            display: inline-block;
           margin: 14px -16px 17px 15px;
           text-transform: none;
           font-size: 2.6rem;
@@ -299,7 +298,21 @@
           font-family: 'Scania Sans Condensed';
           color: #000;
           letter-spacing: -0.05rem;
+}
+
+
+      c-corporate-header .is-dealer.c-corporate-header .navbar-header.c-corporate-header a.dealer.c-corporate-header {
+
+            float: none;
+    display: block;
+    font-family: 'Scania Sans Headline';
+    padding: 12px 15px 3px;
+    border-bottom: 1px solid #e2e2e2;
+    font-size: 1.8rem;
+
       }
+
+
 
       p a {font-weight: bold}
 
